# LinearPRG-Assignment

./: code_review.md  test.json
image-translation-pipeline/: .env.example  .gitignore  README.md  batch_translate.py  main.py  pyproject.toml
image-translation-pipeline/app/: config.py  main.py  models.py
image-translation-pipeline/app/pipeline/: graph.py
image-translation-pipeline/app/pipeline/nodes/: extractor.py  reconstructor.py  translator.py
image-translation-pipeline/app/utils/: image_utils.py
image-translation-pipeline/batch_outputs/: translated_01_oferta_especial.json  translated_02_aceite_oliva.json  translated_03_instrucciones.json  translated_04_envio_gratis.json  translated_06_gran_venta.json  translated_08_auriculares.json
image-translation-pipeline/tests/: conftest.py  test_api.py  test_image_utils.py  test_pipeline_nodes.py
image-translation-pipeline/translated_sample_images/: translated_02_aceite_oliva.json  translated_03_instrucciones.json  translated_05_ingredientes.json  translated_06_gran_venta.json  translated_07_precaucion.json
